--- a/_portfolio/2019_MDM1_2.md
+++ b/_portfolio/2019_MDM1_2.md
@@ -1,6 +1,6 @@
 ---
 title: "Modelling flow of water in a reservoir using ODEs"
-excerpt: "Mathematical Data Modelling Project, 2019 <br/><img src='/images/mdm1_2.png'>"
+excerpt: "Mathematical Data Modelling Project, 2019"
 collection: portfolio
 ---
 This paper aims to establish relationships between the outflow and the inflow of water in a general reservoir in the United Kingdom, 
