--- a/_portfolio/2019_MDM1_3.md
+++ b/_portfolio/2019_MDM1_3.md
@@ -1,6 +1,6 @@
 ---
 title: "Computer simulations of two catching algorithms to improve the efficiency of catching fish"
-excerpt: "Mathematical Data Modelling Project, 2019 <br/><img src='/images/mdm1_3.png'>"
+excerpt: "Mathematical Data Modelling Project, 2019"
 collection: portfolio
 ---
 
