--- a/_portfolio/2019_MDM2_1.md
+++ b/_portfolio/2019_MDM2_1.md
@@ -1,6 +1,6 @@
 ---
 title: "A critical summary of ‘Centrality analysis methods for biological networks and their application to gene regulatory networks’"
-excerpt: "Mathematical Data Modelling Project, 2019 <br/><img src='/images/mdm2_1.png'>"
+excerpt: "Mathematical Data Modelling Project, 2019"
 collection: portfolio
 ---
 
