--- a/_portfolio/2019_MDM2_2.md
+++ b/_portfolio/2019_MDM2_2.md
@@ -1,6 +1,6 @@
 ---
 title: "Creating MATLAB simulations to model aircraft dynamics"
-excerpt: "Mathematical Data Modelling Project, 2019 <br/><img src='/images/mdm2_2.png'>"
+excerpt: "Mathematical Data Modelling Project, 2019"
 collection: portfolio
 ---
 
