--- a/_portfolio/2020_MDM3_1.md
+++ b/_portfolio/2020_MDM3_1.md
@@ -1,6 +1,6 @@
 ---
 title: "Modelling the Binding of FimH to Carbon Nano-dots and the Fluorescence Intensity of the Bound Molecules for Bacteria Detection"
-excerpt: "Mathematical Data Modelling Project, 2020 <br/><img src='/images/mdm3_1.png'>"
+excerpt: "Mathematical Data Modelling Project, 2020"
 collection: portfolio
 ---
 
