--- a/_portfolio/2021_MDM3_2.md
+++ b/_portfolio/2021_MDM3_2.md
@@ -1,7 +1,7 @@
 ---
-title: "Modelling the Binding of FimH to Carbon Nano-dots and the Fluorescence Intensity of the Bound Molecules for Bacteria Detection"
-excerpt: "Mathematical Data Modelling Project, 2020"
+title: "Reducing the Dimensionality of Sensor Data from an Assistive Robot"
+excerpt: "Mathematical Data Modelling Project, 2021"
 collection: portfolio
 ---
 
-Download PDF [here](http://vedang-joshi.github.io/files/mdm3_1.pdf)
+Download PDF [here](http://vedang-joshi.github.io/files/mdm3_2.pdf)
