--- a/_portfolio/2021_MDM3_3.md
+++ b/_portfolio/2021_MDM3_3.md
@@ -1,5 +1,5 @@
 ---
-title: "Reducing the Dimensionality of Sensor Data from an Assistive Robot"
+title: "Using Machine Learning methods for an anti-drowning detection algorithm"
 excerpt: "Mathematical Data Modelling Project, 2021"
 collection: portfolio
 ---
