--- a/_portfolio/2021_MDM3_3.md
+++ b/_portfolio/2021_MDM3_3.md
@@ -4,4 +4,5 @@ excerpt: "Mathematical Data Modelling Project, 2021"
 collection: portfolio
 ---
 
-Download PDF [here](http://vedang-joshi.github.io/files/mdm3_2.pdf)
+Download poster [here](http://vedang-joshi.github.io/files/mdm3_3.pdf)
+Download video presentation here
