--- a/_portfolio/2021_MDM3_3.md
+++ b/_portfolio/2021_MDM3_3.md
@@ -4,5 +4,5 @@ excerpt: "Mathematical Data Modelling Project, 2021"
 collection: portfolio
 ---
 
-Download poster [here](http://vedang-joshi.github.io/files/mdm3_3.pdf)
+Download poster [here](http://vedang-joshi.github.io/files/mdm3_3.pdf) \\
 Download video presentation here
