--- a/_portfolio/2021_MDM3_3.md
+++ b/_portfolio/2021_MDM3_3.md
@@ -5,4 +5,4 @@ collection: portfolio
 ---
 
 Download poster [here](http://vedang-joshi.github.io/files/mdm3_3.pdf)<br/>
-Download video presentation here
+Watch the video presentation [here](https://youtu.be/WNfy_osoVeU)
